fixed the layout of the gwt-MenuBarPopup on mobile

--- a/src/com/lushprojects/circuitjs1/public/style.css
+++ b/src/com/lushprojects/circuitjs1/public/style.css
@@ -92,11 +92,17 @@
 		width: 100%;
 		left: 0 !important;
 	}
-	.gwt-MenuBarPopup>div>table {
+	.gwt-MenuBarPopup>div {
+		overflow: scroll;
 		z-index: 2;
 		width: 100%;
 		height: 300px;
 		position: fixed;
+		top: 30px;
+	}
+	.gwt-MenuBarPopup>div>table {
+		width: 100%;
+		height: 100%;
 	}
 	.menuPopupMiddleCenterInner>div>table {
 		width: 100%;
@@ -112,6 +118,4 @@
 	.trigger+.triggerLabel+div+div {
 		width: 100% !important;
 	}
-
-
 }
